feat(agent): 实现完整的 Tool Calling 支持，重构文件系统工具
  - AgentRunner: 添加 tool calling 支持，根据服务能力自动选择
  - ToolRegistry: 新增 getToolDefinitionObjects 方法，使用 Jackson 解析 JSON
  schema
  - 文件系统工具重构:
    - EditFileTool: 简化参数(old_text/new_text)，保留 CRLF 换行符，改进匹配算法
    - ListDirTool: 参数优化(path/max_entries)，更新忽略目录，emoji 图标输出
    - ReadFileTool: 基于内容的二进制检测，MIME 类型检测，改进分页
  - OpenAiService: 实现完整的 generateResponseWithTools 方法
  - OpenAICompatibleProvider: 实现 tool calling 支持，添加 stripProviderPrefix
  - AiChatPanel: 使用 AiServiceFactory 创建服务，自动应用 LangSmith 追踪
  - JMeter 工具: 统一 parameter schema 格式